# accomodation-link

./: .gitignore  LICENSE  README.md  dummy_model.pkl  main.py  model_trainer.py  models.price_estimation  price_estimation_model.pkl  property_recommendation_model.pkl  pyproject.toml  routes  routes.py  schemas.py  test.py  utils.py
data/: properties.json
model_deployments/: current_price_model.pkl
models/: __init__.py  price_estimation.py  recommendation.py
